Grid alignment fix

--- a/src/scss/_how-it-works-section.scss
+++ b/src/scss/_how-it-works-section.scss
@@ -44,7 +44,7 @@
       @include media-breakpoint-custom-down($screen-sm) {
         left: 20px;
       }
-      left: -20px;
+      left: 0;
     }
 
     &--next {
@@ -53,7 +53,7 @@
       }
 
       justify-content: flex-end;
-      right: -20px;
+      right: 0;
     }
   }
 
