--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -14,6 +14,8 @@ $screen-xxl: 1440px;
 $screen-xxxl: 1620px;
 $screen-hd: 1920px;
 
+$container-max-width: 1280px;
+
 $interactive-table-bp: $screen-sm;
 
 // Colors
